# dsp_project

./: .cred  .env  .gitignore  Aarhus Kommune Real Estate data - Scraped from EDC.csv  EDCscraper.py  EDCscraperDSP.py  GPT_features.py  PyMain.ipynb  README.md  pyproject.toml  ~$EDC w. description.xlsx
Dashboard/: house_price_prediction_model.pkl  interfaceDSP.py  latlongnew.csv
ML Models/: Data_exp.ipynb  Full_Random_Forest_Reg.pkl  Random_Forest.ipynb
dsp_project/0. Data Collection/: EDC w. description.xlsx
dsp_project/0. Data Collection/GPT flows/: GPT_feature_extraction.py  House_data_w_GPT_1-200.pkl  House_data_w_GPT_1-270.pkl
dsp_project/1. Data Exploration/: Data_exp.ipynb  stopord.txt
dsp_project/2. Feature engineering/: Feat_eng copy.py  Feat_eng.py  Feature engineering.ipynb  housing_data_feature_engineered.pkl
dsp_project/3. Modeling/: Random_Forest.ipynb
dsp_project/4. Dashboard/: Top10_features_Random_Forest_Reg.pkl  geopoints.csv  getCoordinates.py  housing_data_engineered.pkl
dsp_project/Data Collection/: GPT_features.ipynb  GPT_features.py  gpt_response.xlsx  gpt_response_clean copy.xlsx  gpt_response_clean.xlsx  test.py
dsp_project/Data Collection/0. Data/GPT flows/: House_data_w_GPT_1-10.pkl  House_data_w_GPT_1-100.pkl  House_data_w_GPT_1-50.pkl  House_data_w_GPT_1-56.pkl
