[tool.poetry]
name = "dsp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
selenium = "^4.18.1"
bs4 = "^0.0.2"
webdriver-manager = "^4.0.1"
pathlib = "^1.0.1"
requests = "^2.31.0"
openai = "^1.23.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
